--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -2,7 +2,7 @@
 
   <%# TODO: Add a select button and options. Depending on the options pull the relevant form %>
 
-  <section class="mb-3 w-full flex items-center justify-between select optional offer_offerable_type"><label class="form-label select optional text-lg font-bold">Offerable type</label>
+  <section class="mb-3 w-full flex items-center justify-between select optional offer_offerable_type"><label class="form-label select optional text-lg font-bold">Offer type</label>
     <select class="form-select select optional rounded-xl" name="offer[offerable_type]" id="offer_offerable_type">
       <option value="">Pick an offer type</option>
       <option value="Property">Property</option>
