--- a/app/views/shared/_item_main.html.erb
+++ b/app/views/shared/_item_main.html.erb
@@ -164,6 +164,7 @@
   </div>
 </div>
 
+<%# Back button %>
 <div class="flex justify-end w-full md:w-3/4 lg:w-1/2 xl:w-2/5 m-auto p-1">
   <%= link_to "javascript:void(0);", id: "back", class: "text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 mr-5  lg:mr-0 text-center hidden sm:block" do %>
     <span class="flex items-center">
