--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -56,6 +56,8 @@
 
         <!-- Profile dropdown -->
         <% if user_signed_in? %>
+        <%= render "shared/search_input" %>
+
         <%= link_to chats_path do  %>
           <button type="button" class="mr-2 relative rounded-full bg-gray-800 p-1 text-gray-500 hover:text-white focus:outline-none">
           <span class="absolute -inset-1.5"></span>
